--- a/Experiment7_I2C/.project
+++ b/Experiment7_I2C/.project
@@ -24,4 +24,45 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>MIL_LCD_lib.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-CUSTOM_LIBS/micro2-lab-experiments/custom-libraries/MIL_LCD_lib.c</locationURI>
+		</link>
+		<link>
+			<name>MIL_LCD_lib.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-CUSTOM_LIBS/micro2-lab-experiments/custom-libraries/MIL_LCD_lib.h</locationURI>
+		</link>
+		<link>
+			<name>driverlib.lib</name>
+			<type>1</type>
+			<locationURI>TIVAWARE_INSTALL/driverlib/ccs/Debug/driverlib.lib</locationURI>
+		</link>
+		<link>
+			<name>tivaUtils.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-CUSTOM_LIBS/micro2-lab-experiments/custom-libraries/tivaUtils.c</locationURI>
+		</link>
+		<link>
+			<name>tivaUtils.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-CUSTOM_LIBS/micro2-lab-experiments/custom-libraries/tivaUtils.h</locationURI>
+		</link>
+	</linkedResources>
+	<variableList>
+		<variable>
+			<name>CUSTOM_LIBS</name>
+			<value>file:/C:/Users/reyna/Documents/Code%20Composer/Micro2%20Lab%20Workspace/r-tiles-dev/custom-libraries</value>
+		</variable>
+		<variable>
+			<name>LIBRARIES_GIT_FOLDER</name>
+			<value>file:/X:/Desktop/Micro%202%20files/micro2-repository-workspace</value>
+		</variable>
+		<variable>
+			<name>TIVAWARE_INSTALL</name>
+			<value>file:/C:/ti/TivaWare_C_Series-2.1.4.178</value>
+		</variable>
+	</variableList>
 </projectDescription>
