Uploading updated vars.ini file

--- a/vars.ini
+++ b/vars.ini
@@ -1,3 +1,4 @@
 TIVAWARE_INSTALL = C:\ti\TivaWare_C_Series-2.1.4.178
 LIBRARIES_GIT_FOLDER = X:\Desktop\Micro 2 files\micro2-repository-workspace
 CUSTOM_LIBS = C:\Users\reyna\Documents\Code Composer\Micro2 Lab Workspace\micro2-lab-experiments\custom-libraries
+CUSTOM_LIB_MILLAB = X:\My Documents\Micro 2 files\micro2-repository-workspace\micro2-lab-experiments\custom-libraries
